add: jupyter, bash run and README

--- a/Boxplots_Interpolation.ipynb
+++ b/Boxplots_Interpolation.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,18 +38,18 @@
     "import pandas as pd\n",
     "#by Anna\n",
     "# from data_preparation import data_preparation\n",
-    "from maxvol_cut import rect_maxvol_cut, f_no_cut, f_penal_2D\n",
-    "from tools import norm_data, add_coords, gen_input, extend_score, points_selection, f_no_cut, f_cut_eps, calc_score, good_points_brute_force, idx_to_idx\n",
+    "# from maxvol_cut import rect_maxvol_cut, f_no_cut, f_penal_2D\n",
+    "# from tools import norm_data, add_coords, gen_input, extend_score, points_selection, f_no_cut, f_cut_eps, calc_score, good_points_brute_force, idx_to_idx\n",
     "import csv\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from util import Divergence"
+    "from src.util import MaxVolSampling"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -275,17 +275,17 @@
     "\n",
     "\n",
     "dict_for_dict_wasserstein = {}\n",
-    "csv_file_to_process = 'data_v0.csv'\n",
+    "csv_file_to_process = './src/data_v0.csv'\n",
     "df_name = list(pd.read_csv(csv_file_to_process,  sep=',').columns)\n",
     "soil_parameters = df_name\n",
-    "path_to_inter_npy_files = '../experiments/cLHS_10_000/Interpolation_data/'\n",
+    "path_to_inter_npy_files = './experiments/cLHS_10_000/Interpolation_data/'\n",
     "\n",
     "np.random.seed(42)\n",
     "units = ['Soil moisture 10 cm, %','Soil moisture 30 cm, %','Soil moisture 80 cm, %','Mean crop yield, c/ha', 'Penetration resistance 10 cm, kPa','Penetration resistance 30 cm, kPa','Penetration resistance 80 cm, kPa', 'Soil Temperature 10 cm, °C','Soil Temperature 30 cm, °C','Soil Temperature 80 cm, °C']\n",
     "\n",
-    "interpolation_files = sorted(os.listdir('../experiments/cLHS_10_000/Interpolation_data/'))\n",
+    "interpolation_files = sorted(os.listdir('./experiments/cLHS_10_000/Interpolation_data/'))\n",
     "\n",
-    "path = '../experiments/cLHS_million_steps'\n",
+    "path = './experiments/cLHS_million_steps'\n",
     "\n",
     "for index, file in enumerate(interpolation_files):\n",
     "    \n",
@@ -312,18 +312,18 @@
     "\n",
     "\n",
     "    from itertools import compress\n",
-    "    list_of_cLHS_million_runs = sorted(os.listdir('../experiments/cLHS_million_steps'))\n",
+    "    list_of_cLHS_million_runs = sorted(os.listdir('./experiments/cLHS_million_steps'))\n",
     "    selection = ['NDVI' in name for name in list_of_cLHS_million_runs] \n",
     "    cLHS_points_files = list(compress(list_of_cLHS_million_runs, selection))\n",
     "    for num_points, csv_file in zip(number_of_points, cLHS_points_files):\n",
     "        \n",
     "        dict_for_parameter['cLHS'][num_points] = np.genfromtxt(os.path.join(path, csv_file),delimiter=',', dtype=int)\n",
-    "        SAR = Divergence()\n",
+    "        SAR = MaxVolSampling()\n",
     "        SAR.soil_feature = soil_parameters[index]\n",
     "        SAR.num_of_points = num_points\n",
-    "        SAR.soil_data = pd.read_csv('data_v0.csv',  sep=',')\n",
+    "        SAR.soil_data = pd.read_csv('./src/data_v0.csv',  sep=',')\n",
     "        SAR.path_to_file_with_indices = None\n",
-    "        SAR.wd = '.'\n",
+    "        SAR.wd = './DEM_files/'\n",
     "        \n",
     "        SAR.path_to_interpolation_file = os.path.join(path_to_inter_npy_files, file)\n",
     "        \n",
