add: final plots and README

--- a/Boxplots_Interpolation.ipynb
+++ b/Boxplots_Interpolation.ipynb
@@ -6,10 +6,26 @@
    "source": [
     "## Boxplot plots\n",
     "_______\n",
-    "@misha_grol\n",
+    "tg: @misha_grol\n",
     "\n",
     "\n",
     "Boxplots for features based on DEM and NDVI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Uncomment for Google colab\n",
+    "# !pip install maxvolpy\n",
+    "\n",
+    "# !pip install clhs\n",
+    "\n",
+    "# !git clone https://github.com/EDSEL-skoltech/maxvol_sampling\n",
+    "    \n",
+    "# %cd maxvol_sampling/"
    ]
   },
   {
