--- a/Plots_std_Interpolation.ipynb
+++ b/Plots_std_Interpolation.ipynb
@@ -26,6 +26,8 @@
     "# Uncomment for Google colab\n",
     "# !pip install maxvolpy\n",
     "\n",
+    "# !pip install clhs\n",
+    "\n",
     "# !git clone https://github.com/EDSEL-skoltech/maxvol_sampling\n",
     "    \n",
     "# %cd maxvol_sampling/"
