--- a/How_to_start.ipynb
+++ b/How_to_start.ipynb
@@ -16,8 +16,10 @@
     "# Uncomment for Google colab\n",
     "# !pip install maxvolpy\n",
     "\n",
+    "# !pip install clhs\n",
+    "\n",
     "# !git clone https://github.com/EDSEL-skoltech/maxvol_sampling\n",
-    "    \n",
+    "\n",
     "# %cd maxvol_sampling/"
    ]
   },
