add: final plots and README

--- a/Boxplots_Interpolation.ipynb
+++ b/Boxplots_Interpolation.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Boxplot plots\n",
     "_______\n",
-    "tg: @misha_grol\n",
+    "tg: @misha_grol and anna.petrovskaia@skoltech.ru\n",
     "\n",
     "\n",
     "Boxplots for features based on DEM and NDVI"
