add: final plots and notebook

--- a/Boxplots_Interpolation.ipynb
+++ b/Boxplots_Interpolation.ipynb
@@ -34,32 +34,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import csv\n",
     "import seaborn as sns\n",
-    "\n",
-    "\n",
-    "from scipy.spatial import distance\n",
-    "from scipy.stats import entropy\n",
-    "from scipy.special import kl_div\n",
-    "from scipy.stats import ks_2samp\n",
-    "\n",
-    "\n",
-    "\n",
     "import argparse\n",
     "import numpy as np\n",
     "import osgeo.gdal as gdal\n",
     "import os\n",
-    "\n",
     "import pandas as pd\n",
-    "#by Anna\n",
-    "# from data_preparation import data_preparation\n",
-    "# from maxvol_cut import rect_maxvol_cut, f_no_cut, f_penal_2D\n",
-    "# from tools import norm_data, add_coords, gen_input, extend_score, points_selection, f_no_cut, f_cut_eps, calc_score, good_points_brute_force, idx_to_idx\n",
-    "import csv\n",
-    "\n",
+    "import matplotlib.cm as cm\n",
     "import matplotlib.pyplot as plt\n",
+    "from numpy import genfromtxt\n",
+    "import gdal\n",
+    "import xarray as xr\n",
+    "import clhs as cl\n",
     "\n",
+    "\n",
+    "from scipy.spatial import ConvexHull, convex_hull_plot_2d\n",
+    "from scipy.spatial import voronoi_plot_2d, Voronoi\n",
+    "from scipy.spatial import distance\n",
+    "from scipy.stats import entropy\n",
+    "from scipy.special import kl_div\n",
+    "from scipy.stats import ks_2samp\n",
+    "from scipy.stats import wasserstein_distance\n",
+    "\n",
+    "\n",
+    "%matplotlib inline\n",
     "from src.util import MaxVolSampling"
    ]
   },
@@ -69,15 +68,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.rcParams[\"font.family\"] = \"Times New Roman\"\n",
+    "# Uncoment \"Times New Roman\" and \"science\" stule plt if you have it\n",
+    "# plt.rcParams[\"font.family\"] = \"Times New Roman\"\n",
     "\n",
     "plt.rcParams.update({'font.size': 16})\n",
     "#use science style for plots\n",
-    "plt.style.use(['science', 'grid'])\n",
+    "# plt.style.use(['science', 'grid'])\n",
     "\n",
-    "plt.rcParams['xtick.labelsize'] =15\n",
+    "plt.rcParams['xtick.labelsize'] = 15\n",
     "\n",
-    "plt.rcParams['ytick.labelsize'] =20\n"
+    "plt.rcParams['ytick.labelsize'] = 20\n"
    ]
   },
   {
@@ -419,11 +419,111 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plots of Wasserstein distance evolution "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fig, ((ax0, ax1), (ax2, ax3), (ax4, ax5), (ax6, ax7),(ax8, ax9))  = plt.subplots(nrows=5, ncols=2, sharex=True,figsize=(18, 25))\n",
+    "\n",
+    "names_for_plots  = ['Soil moisture 10 cm, %','Soil moisture 30 cm, %',\n",
+    "                    'Soil moisture 80 cm, %','Mean crop yield, c/ha',\n",
+    "                    'Penetration resistance 10 cm, kPa','Penetration resistance 30 cm, kPa',\n",
+    "                    'Penetration resistance 80 cm, kPa', 'Soil Temperature 10 cm, °C',\n",
+    "                    'Soil Temperature 30 cm, °C','Soil Temperature 80 cm, °C']\n",
+    "path = './experiments/cLHS_10_000/exp_fem_poins/npy_files/'\n",
+    "files_with_points = os.listdir(path)\n",
+    "\n",
+    "range_files_allocation=[]\n",
+    "for file in files_with_points:\n",
+    "    range_files_allocation.append(np.load(os.path.join(path,file), allow_pickle=True)[None])\n",
+    "    res = np.load(os.path.join(path,file), allow_pickle=True)\n",
+    "\n",
+    "dict_for_indices = {'MAXVOL':[], 'cLHS':[], 'Random':[]}\n",
+    "from collections import ChainMap\n",
+    "for sampling in [*range_files_allocation[0][0].keys()]:\n",
+    "    loc_list = [dict(loc_dict[0][sampling]) for loc_dict in range_files_allocation]\n",
+    "    dict_for_indices[sampling] = dict(ChainMap(*loc_list))\n",
+    "n = 0\n",
+    "number_of_points = range(7,31)\n",
+    "csv_file_to_process = './src/data_v0.csv'\n",
+    "\n",
+    "for row in ((ax0, ax1), (ax2, ax3), (ax4, ax5), (ax6, ax7),(ax8, ax9)):\n",
+    "    for col in row:\n",
+    "        \n",
+    "        # COMPUTE WASSERSTEIN DISTANCE\n",
+    "        \n",
+    "        df_name = list(pd.read_csv(csv_file_to_process,  sep=',').columns)\n",
+    "        soil_parameters = df_name\n",
+    "        path_to_inter_npy_files = './experiments/cLHS_10_000/Interpolation_data/'\n",
+    "        np.random.seed(42)\n",
+    "        units = ['Soil moisture 10 cm, %','Soil moisture 30 cm, %','Soil moisture 80 cm, %','Mean crop yield, c/ha', 'Penetration resistance 10 cm, kPa','Penetration resistance 30 cm, kPa','Penetration resistance 80 cm, kPa', 'Soil Temperature 10 cm, °C','Soil Temperature 30 cm, °C','Soil Temperature 80 cm, °C']\n",
+    "        interpolation_files = sorted(os.listdir('./experiments/cLHS_10_000/Interpolation_data/'))\n",
+    "        print('Parameter:', interpolation_files[n])\n",
+    "        dict_for_plots  = {'MAXVOL':{},\n",
+    "                             'cLHS':{}, \n",
+    "                             'Random':{}}\n",
+    "        dict_for_new_maxvol = {'MAXVOL_NEW': {}}\n",
+    "        for points in number_of_points:\n",
+    "            SAR = MaxVolSampling()\n",
+    "            SAR.soil_feature = soil_parameters[n]\n",
+    "            SAR.num_of_points = points\n",
+    "            SAR.soil_data = pd.read_csv(csv_file_to_process,  sep=',')\n",
+    "            SAR.path_to_file_with_indices = None\n",
+    "            SAR.wd = './DEM_files//'\n",
+    "\n",
+    "            SAR.path_to_interpolation_file = os.path.join(path_to_inter_npy_files, interpolation_files[n])\n",
+    "            _  =SAR.data_preparation(SAR.wd, data_m=3, dem_dir = None)\n",
+    "            SAR.original_soil_data(SAR.soil_feature)\n",
+    "            interpolation_map = SAR.interpolation_array[::-1]\n",
+    "            MAXVOL_ = interpolation_map[SAR.i_am_maxvol_function()]\n",
+    "\n",
+    "            # List to iterate over 100 realization of cLHS and Random\n",
+    "            cLHS_ = [interpolation_map[dict_for_indices['cLHS'][points][i]] for i in range(100)]\n",
+    "            Random_ = [interpolation_map[dict_for_indices['Random'][points][i]] for i in range(100)]\n",
+    "            dict_for_plots['MAXVOL'][points] = wasserstein_distance(SAR.original_data, MAXVOL_)\n",
+    "            dict_for_plots['cLHS'][points] = [wasserstein_distance(SAR.original_data, mdt) for mdt in cLHS_]\n",
+    "            dict_for_plots['Random'][points] = [wasserstein_distance(SAR.original_data, mdt) for mdt in Random_]\n",
+    "            \n",
+    "        quantile_lower_random = np.array([np.quantile(dict_for_plots['Random'][i], .10) for i in number_of_points])\n",
+    "        quantile_upper_random = np.array([np.quantile(dict_for_plots['Random'][i], .90) for i in number_of_points])\n",
+    "        median_random = np.array([np.median(dict_for_plots['Random'][i]) for i in number_of_points])\n",
+    "\n",
+    "        \n",
+    "        \n",
+    "        quantile_lower_cLHS = np.array([np.quantile(dict_for_plots['cLHS'][i], .10) for i in number_of_points])\n",
+    "        quantile_upper_cLHS = np.array([np.quantile(dict_for_plots['cLHS'][i], .90) for i in number_of_points])\n",
+    "        median_cLHS = np.array([np.median(dict_for_plots['cLHS'][i]) for i in number_of_points])\n",
+    "        \n",
+    "        col.plot(number_of_points, [*dict_for_plots['MAXVOL'].values()], '-.',label='Maxvol',linewidth=4,markersize=10 )\n",
+    "        col.plot(number_of_points, median_random, label='Random median',linewidth=3,markersize=10 )\n",
+    "        col.plot(number_of_points, median_cLHS,'--',label='cLHS median',linewidth=3,markersize=14)\n",
+    "        col.fill_between(number_of_points, quantile_lower_random, quantile_upper_random , alpha=0.1, color='orange', label='CI Random')\n",
+    "        col.fill_between(number_of_points, quantile_lower_cLHS, quantile_upper_cLHS , alpha=0.1, color='green', label='CI cLHS')\n",
+    "        \n",
+    "        col.set_xlim(min(number_of_points), max(number_of_points))\n",
+    "#         col.set_xticks(number_of_points)\n",
+    "        col.set_title(names_for_plots[n])\n",
+    "        col.grid(True)\n",
+    "        col.set(ylabel=\"Wasserstein distance\")\n",
+    "        if n==8 or n==9:\n",
+    "            \n",
+    "            col.set(xlabel=\"Number of points for sampling\", ylabel=\"Wasserstein distance\")\n",
+    "\n",
+    "\n",
+    "#         plt.show()\n",
+    "        n+=1\n",
+    "# plt.legend()\n",
+    "# plt.savefig('../plots/agricultural_systems_plots/plots_with_evolution_of_wassersterin/wasserstein_disctance_IQR.png', dpi=300)\n",
+    "# plt.savefig('../plots/agricultural_systems_plots/plots_with_evolution_of_wassersterin/nwasserstein_disctance_IQR.svg')    "
+   ]
   }
  ],
  "metadata": {
